DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Account__c.field-meta.xml
<CustomField>
    <fullName>amc__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>