DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Actual_Performance__c.field-meta.xml
<CustomField>
    <fullName>amc__Actual_Performance__c</fullName>
    <formula>If(  amc__Cost_Budget__c   = 0, &quot;No Measurement&quot;, if(((   amc__Cost_Actual__c  +   amc__Expense_Summary__c +  amc__Actual_Project_Expenses__c  ) / amc__Cost_Budget__c)&lt;0.8,
&quot;Under Project Budget&quot;, 
if((( amc__Cost_Actual__c  +   amc__Expense_Summary__c +  amc__Actual_Project_Expenses__c  ) / amc__Cost_Budget__c) &lt;=1,
&quot;Within Project Budget&quot;,
&quot;Over Project Budget&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows performance based on Completed Hours + Material Costs + Actual Project Expenses</inlineHelpText>
    <label>Actual Performance</label>
    <type>Text</type>
</CustomField>