DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Actual_Project_Expenses__c.field-meta.xml
<CustomField>
    <fullName>amc__Actual_Project_Expenses__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Identifies the total expenses claimed on the Project (e.g. where Status = Approved)</inlineHelpText>
    <label>Actual Project Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>