DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Actual_Project_Expenses_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Actual_Project_Expenses_Billable__c</fullName>
    <inlineHelpText>Identifies the value of all billable Expenses that are approved on this project</inlineHelpText>
    <label>Actual Project Expenses (Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>