DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>amc__Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>