DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Anticipated_Project_Expenses__c.field-meta.xml
<CustomField>
    <fullName>amc__Anticipated_Project_Expenses__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Identifies the anticipated expenses to be claimed on this Project</inlineHelpText>
    <label>Anticipated Project Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>