DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Baseline_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Baseline_Start_Date__c</fullName>
    <label>Baseline Start Date</label>
    <summarizedField>amc__Milestone__c.amc__Baseline_Start_Date__c</summarizedField>
    <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>