DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>amc__Billing_Cycle__c</fullName>
    <inlineHelpText>Identifies the billing method for this project</inlineHelpText>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Periodic</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>