DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>amc__Billing_Type__c</fullName>
    <inlineHelpText>Identifies billing type that this Project will use</inlineHelpText>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Fixed Price + Expenses</fullName>
            </value>
            <value>
                <fullName>Time &amp; Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>