DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Category__c.field-meta.xml
<CustomField>
    <fullName>amc__Category__c</fullName>
    <description>Identifies the category this project belongs to</description>
    <inlineHelpText>Identifies the category this project belongs to</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>