DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Client_Overview_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>amc__Client_Overview_Page_URL__c</fullName>
    <formula>$Setup.amc__Rates__c.amc__Read_Only_Site__c &amp; &quot;?pid=&quot; &amp; amc__External_Project_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field: Identifies the URL to provide customer read-only access</inlineHelpText>
    <label>Client Overview Page URL</label>
    <type>Text</type>
</CustomField>