DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Colour_Hex__c.field-meta.xml
<CustomField>
    <fullName>amc__Colour_Hex__c</fullName>
    <inlineHelpText>Enter the 6 digit Hexadecimal reference that should be applied to this Project. This will take precedence over the &apos;Colour&apos; field</inlineHelpText>
    <label>Colour Hex</label>
    <length>6</length>
    <type>Text</type>
</CustomField>