DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Complete_Actions__c.field-meta.xml
<CustomField>
    <fullName>amc__Complete_Actions__c</fullName>
    <inlineHelpText>Roll Up Summary: Counts all Actions relating to this Project where the Action Status = Complete</inlineHelpText>
    <label>Complete Actions</label>
    <summarizedField>amc__Milestone__c.amc__Complete_Actions__c</summarizedField>
    <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>