DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Cost_Actual__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_Actual__c</fullName>
    <formula>if( ISPICKVAL(amc__Project_Day_Rate__c, &quot;Standard&quot;),  amc__Billable_Hourly_Rate__c   *  amc__Hours_Completed__c,  amc__Hours_Completed_Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides a summary for the Hours Completed. (Previously Labelled Cost Actual)</inlineHelpText>
    <label>Billable Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>