DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Cost_Budget__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Set the total budget available for this Project. (Previously labelled Cost Budget)</inlineHelpText>
    <label>Project Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>