DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Cost_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_Day_Rate__c</fullName>
    <inlineHelpText>Identifies the day cost value for this project. Used to calculate project costs if Cost Rate = Standard</inlineHelpText>
    <label>Cost Day Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>