DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Cost_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_Hourly_Rate__c</fullName>
    <formula>IF(ISPICKVAL(  amc__Cost_Rate__c , &quot;Standard&quot;),  amc__Cost_Day_Rate__c  /  IF(NOT(ISBLANK(amc__Hours_Per_Day__c)), amc__Hours_Per_Day__c, IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 8)) , 0)</formula>
    <inlineHelpText>Identifies the Hourly Cost for project this Project. Used to calculate project costs if Billing Rate = Standard</inlineHelpText>
    <label>Cost Hourly Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>