DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Cost_Rate__c</fullName>
    <inlineHelpText>Identifies whether the cost of hours accrued on this project will be based on the standard ‘Day Cost’ specified on the Project, or the ‘Hourly Cost’ of the individual Action Owners Role record</inlineHelpText>
    <label>Cost Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Role-based</fullName>
            </value>
            <value>
                <fullName>Skill-based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>