DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Current_CPI__c.field-meta.xml
<CustomField>
    <fullName>amc__Current_CPI__c</fullName>
    <description>Identifies the most recent CPI value for this Project</description>
    <inlineHelpText>Identifies the most recent CPI value for this Project</inlineHelpText>
    <label>Current CPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>