DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>amc__Date_Format__c</fullName>
    <description>Used primarily as a reference in apex code. does not need to be on page layout.</description>
    <formula>amc__Tax_Label__r.amc__Date_Format__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Format</label>
    <type>Text</type>
</CustomField>