DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Day_Rate__c</fullName>
    <inlineHelpText>Set the &apos;Standard&apos; Billable Day Rate for this Project. (Previously Labelled Day Rate)</inlineHelpText>
    <label>Billable Day Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>