DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Display_on_PMO_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>amc__Display_on_PMO_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies whether this Project will be displayed on the PMO Dashboard</inlineHelpText>
    <label>Display on PMO Dashboard</label>
    <type>Checkbox</type>
</CustomField>