DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Display_Overview_Tab__c.field-meta.xml
<CustomField>
    <fullName>amc__Display_Overview_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Tab should be available on the Client Overview Page</inlineHelpText>
    <label>Display Overview Tab</label>
    <type>Checkbox</type>
</CustomField>