DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Enforce_Dependency_Validation__c.field-meta.xml
<CustomField>
    <fullName>amc__Enforce_Dependency_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dependency Trigger logic will only execute if this field is set to TRUE.</inlineHelpText>
    <label>Enforce Dependency Validation</label>
    <type>Checkbox</type>
</CustomField>