DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Exclude_from_Daily_Digest__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Daily_Digest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies whether this Project should be excluded from the Daily Digest Email</inlineHelpText>
    <label>Exclude from Daily Digest</label>
    <type>Checkbox</type>
</CustomField>