DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Exclude_from_Program_Planner__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Program_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, this Project will not be visible on the Program Planner.</inlineHelpText>
    <label>Exclude from Program Planner</label>
    <type>Checkbox</type>
</CustomField>