DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Exclude_from_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Scheduler__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if this Project&apos;s Actions should be excluded from the Scheduler</inlineHelpText>
    <label>Exclude from Scheduler</label>
    <type>Checkbox</type>
</CustomField>