DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Expenses_Mark_Up__c.field-meta.xml
<CustomField>
    <fullName>amc__Expenses_Mark_Up__c</fullName>
    <inlineHelpText>Identifies the markup % applied to Expenses on this Project</inlineHelpText>
    <label>Expenses Mark Up %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>