DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__External_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>amc__External_Project_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>Identifies the unique code for the Project that is used by the Client Overview Page URL field</inlineHelpText>
    <label>External Project Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>