DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Force_Financials_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>amc__Force_Financials_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to TRUE forces a recalculation of the $ figures across all Actions &amp; Time Logs. This is to provide clients with the ability to adjust rates on the project and do a mass recalculation.</description>
    <inlineHelpText>When set to TRUE forces a recalculation of the $ figures across all Actions &amp; Time Logs. This is to provide clients with the ability to adjust rates on the project and do a mass recalculation.</inlineHelpText>
    <label>Force Financials Recalculation</label>
    <type>Checkbox</type>
</CustomField>