DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Generate_Weekly_Project_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>amc__Generate_Weekly_Project_Status_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if a weekly Project Status Report PDF is generated for this Project</inlineHelpText>
    <label>Generate Weekly Project Status Report</label>
    <type>Checkbox</type>
</CustomField>