DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Hours_Allocated__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Allocated__c</fullName>
    <formula>IF( OR(ISBLANK(amc__Day_Rate__c) , amc__Day_Rate__c = 0) , 0, IF(ISPICKVAL( amc__Project_Day_Rate__c , &quot;Standard&quot;), ((IF(ISBLANK(amc__Cost_Budget__c), 0, amc__Cost_Budget__c) - ( amc__Material_Costs_Scheduled__c + IF(ISBLANK(amc__Anticipated_Project_Expenses__c), 0, amc__Anticipated_Project_Expenses__c) ))/ IF(ISBLANK(amc__Day_Rate__c), 0, amc__Day_Rate__c))* IF(NOT(ISBLANK(amc__Hours_Per_Day__c)), amc__Hours_Per_Day__c, IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)), $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 8)), 0))</formula>
    <inlineHelpText>Hours Allocated determines how many hours are available witin the allocated Budget - Anticipated Project Expenses. This formula only applies if the Project Day Rate = Standard (Otherwise, defaults to zero).</inlineHelpText>
    <label>Hours Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>