DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Hours_Completed_Value_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Completed_Value_Cost__c</fullName>
    <inlineHelpText>Summarises the Hours Completed Value of the Project Costs based on the Total Hours Completed</inlineHelpText>
    <label>Hours Completed Value (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>