DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Hours_Forecast_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Forecast_Non_Billable__c</fullName>
    <formula>amc__Hours_Completed_Non_Billable__c + amc__Hours_Remaining_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field: Sum total of ‘Hours Completed – Non Billable’ + ‘Hours Remaining – Non Billable’</inlineHelpText>
    <label>Hours Forecast - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>