DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Per_Day__c</fullName>
    <defaultValue>IF(NOT(ISBLANK($Setup.amc__Rates__c.amc__Hours_Per_Day__c)),  $Setup.amc__Rates__c.amc__Hours_Per_Day__c, 8)</defaultValue>
    <inlineHelpText>Identifies how many hours a standard Day is made up of for this Project. Default Value = 8</inlineHelpText>
    <label>Hours Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>