DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Hours_Remaining_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Remaining_Cost__c</fullName>
    <inlineHelpText>Summarises the Hours Remaining Cost field for all related Milestones. (Previously Labelled Hours Remaining Cost)</inlineHelpText>
    <label>Hours Remaining Value (Billable)</label>
    <summarizedField>amc__Milestone__c.amc__Hours_Remaining_Cost__c</summarizedField>
    <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>