DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Hours_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Scheduled__c</fullName>
    <inlineHelpText>Identifies the number of billable hours scheduled for this Project. (Previously Labelled Hours Scheduled)</inlineHelpText>
    <label>Hours Scheduled - Billable</label>
    <summarizedField>amc__Milestone__c.amc__Hours_Scheduled__c</summarizedField>
    <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>