DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Include_Expense_Appendix__c.field-meta.xml
<CustomField>
    <fullName>amc__Include_Expense_Appendix__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies whether the Expense Appendix should be added to the Billing Event PDF. Note: Only applies to Time &amp; Materials or Fixed Price + Expenses Projects</inlineHelpText>
    <label>Include Expense Appendix</label>
    <type>Checkbox</type>
</CustomField>