DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Include_Time_Log_Appendix__c.field-meta.xml
<CustomField>
    <fullName>amc__Include_Time_Log_Appendix__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies whether the Time Log Appendix should be added to the Billing Event PDF. Note: Only applies to Time &amp; Materials Projects</inlineHelpText>
    <label>Include Time Log Appendix</label>
    <type>Checkbox</type>
</CustomField>