DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__KPI_P_L_Variance__c.field-meta.xml
<CustomField>
    <fullName>amc__KPI_P_L_Variance__c</fullName>
    <formula>amc__P_L_Scheduled__c - amc__P_L_Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Calculates P&amp;L Scheduled - P&amp;L Forecast</inlineHelpText>
    <label>KPI: P&amp;L Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>