DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__KPI_Total_Hours_Variance__c.field-meta.xml
<CustomField>
    <fullName>amc__KPI_Total_Hours_Variance__c</fullName>
    <formula>amc__Total_Hours_Scheduled__c - (amc__Total_Hours_Completed__c + amc__Total_Hours_Remaining__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Calculates Total Hours Scheduled - (Total Hours Completed + Total Hours Remaining)</inlineHelpText>
    <label>KPI: Total Hours Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>