DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>amc__Logo_URL__c</fullName>
    <inlineHelpText>URL For the Project that will be displayed alongside the corporate logo (if applicable)</inlineHelpText>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>