DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Old_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>amc__Old_SFDC_ID__c</fullName>
    <externalId>true</externalId>
    <label>Old SFDC ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>