DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Overtime_Allowed_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Overtime_Allowed_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if overtime can be applied to the Billable calculations</inlineHelpText>
    <label>Overtime Allowed (Billable)</label>
    <type>Checkbox</type>
</CustomField>