DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Overtime_Allowed_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Overtime_Allowed_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if overtime can be applied to the Cost calculations</inlineHelpText>
    <label>Overtime Allowed (Cost)</label>
    <type>Checkbox</type>
</CustomField>