DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Overtime_Ratio_Cost__c.field-meta.xml
<CustomField>
    <fullName>amc__Overtime_Ratio_Cost__c</fullName>
    <inlineHelpText>Identifies the overtime ratio applied to Cost calculations (e.g. 1.5 equals &apos;Time and a Half&apos;)</inlineHelpText>
    <label>Overtime Ratio (Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>