DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>amc__Payment_Terms__c</fullName>
    <inlineHelpText>Identifies the Payment Terms for any related Billing Events</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>