DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Pending_Project_Expenses_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Pending_Project_Expenses_Non_Billable__c</fullName>
    <inlineHelpText>Identifies the value of all non billable Expenses that are pending or submitted, but not yet approved</inlineHelpText>
    <label>Pending Project Expenses (Non Billable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>