DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Periodic_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>amc__Periodic_Billing_Frequency__c</fullName>
    <inlineHelpText>Identifies the frequency the periodic billing should be processed. Please do not add further values to this list.</inlineHelpText>
    <label>Periodic Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>1st &amp; 16th</fullName>
            </value>
            <value>
                <fullName>4 Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>