DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Periodic_Billing_Last_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Periodic_Billing_Last_Date__c</fullName>
    <inlineHelpText>Identifies the date of the last periodic billing event</inlineHelpText>
    <label>Periodic Billing Last Date</label>
    <type>Date</type>
</CustomField>